# Ludork

./: .gitignore  Data.py  EditorStatus.py  LICENSE.md  LoadEditor.py  README.md  README_zh_CN.md  W_MainWindow.py  W_StartWindow.py  build_C_Ext.bat  build_C_Ext.sh  build_exec.bat  build_exec.sh  cleanup.bat  cleanup.sh  del-cache.sh  del_cache.sh  generateiOSApp.sh  init.bat  init.sh  launcher.py  localeTransfer.py  main.py  pack.bat  pack.conf  pack.py  pack.sh  pklTransfer.py  requirements.txt  run.bat  run.sh  update.bat  update.sh  versions.conf
BuildTools/: generateiOSApp.sh  pack_game.bat  pack_game.py  pack_game.sh  pack_ios.sh
BuildTools/packaging/: _lib.bat  _lib.sh  pack-game.bat  pack-game.sh  pack-ios.sh
C_Extensions/: CMakeLists.txt  SFMLcommon.cmake  build.py  common.cmake  extensions.toml  parse.py  setup.py
C_Extensions/Animation/: CMakeLists.txt  main.cpp  process.py
C_Extensions/Animation/src/: CompressAnimation.cpp
C_Extensions/Editor/: CMakeLists.txt  main.cpp  process.py
C_Extensions/EditorExt/: CMakeLists.txt  main.cpp
C_Extensions/EngineExt/: CMakeLists.txt  main.cpp
C_Extensions/GamePlay/: CMakeLists.txt  main.c  main.cpp  move.py  process.py  setup.py
C_Extensions/GamePlay/include/: GameMap.h  Particle.h  Tilemap.h  utils.h
C_Extensions/GamePlay/include/GameMap/: CExtensionFindPath.h  FillPassabilityImage.h  FindPath.h  GetLightMap.h  GetMaterialPropertyMap.h  GetMaterialPropertyTexture.h  RebuildPassabilityCache.h
C_Extensions/GamePlay/include/Particles/: AddParticle.h  RemoveParticle.h  UpdateParticlesInfo.h
C_Extensions/GamePlay/src/: GameMap.c  GameMap.cpp  Particle.cpp  Tilemap.cpp  utils.cpp
C_Extensions/GamePlay/src/GameMap/: CExtensionFindPath.cpp  FillPassabilityImage.cpp  FindPath.cpp  GetLightMap.cpp  GetMaterialPropertyMap.cpp  GetMaterialPropertyTexture.cpp  RebuildPassabilityCache.cpp
C_Extensions/GamePlay/src/Particles/: AddParticle.cpp  RemoveParticle.cpp  UpdateParticlesInfo.cpp
C_Extensions/GlobalExt/: CMakeLists.txt  main.cpp
C_Extensions/Graphics/: CMakeLists.txt  main.cpp  process.py
C_Extensions/Graphics/include/: Color.h  CompressAnimation.h  GameMapGraphics.h  RectBase.h  TilemapGraphics.h
C_Extensions/Graphics/src/: Color.cpp  CompressAnimation.cpp  GameMapGraphics.cpp  RectBase.cpp  TilemapGraphics.cpp
C_Extensions/Utils/: CMakeLists.txt  main.cpp  process.py  setup.py
C_Extensions/bindgen/: BindAnnotations.hpp  README.md  __init__.py  codegen.py  generate.py  migrate.py  parser.py
C_Extensions/include/: utils.h
C_Extensions/src/: utils.cpp
C_Extentions/Tilemap/: main.c  setup.py
EditorExtensions/: __init__.py
EditorGlobal/: Data.py  EditorStatus.py  MainWindow.py  QmlDialogHost.py  StartWindow.py  W_MainWindow.py  __init__.py
EditorGlobal/MainUtils/: DatabaseMenu.py  GameRunner.py  LayerBar.py  Layout.py  LightActor.py  LocalIpc.py  MapListOps.py  MenuBuilder.py  PluginHost.py  ProjectConfig.py  __init__.py
EditorGlobal/Qml/: StartActionButton.qml  StartWindow.qml  dialogLocale.js
Game/: E_Effects.py  E_Locale.py  __init__.py
Game/Filters/: F_Sound.py
Game/Utils/: U_File.py  U_Math.py  U_Render.py  __init__.py
Global/: Data.py  W_MainWindow.py  W_StartWindow.py
Locale/: en_GB  locale.json  zh_CN
NodeGraph/: EditorNode.py  N_EditorNode.py  __init__.py
Plugins/OfficialLocaleTools/: OfficialLocaleToolsLocaleEditor.py  OfficialLocaleToolsLocaleIO.py  Plugin.json  Plugin.py  locale.json
Resource/: icon.icns
Sample/: 11.py  Entry.py  EntryEditorIpc.py  Launcher.py  Main.ini  build_exec.py  pyrightconfig.json
Sample/Engine/: Animation.py  BPBase.py  Curve.py  Decorators.py  E_Effects.py  E_Input.py  E_Locale.py  E_System.py  EngineSceneBase.py  EngineSystem.py  Input.py  Locale.py  SceneBase.py  System.py  Video.py  __init__.py
Sample/Global/: Animation.py  Camera.py  FocusManager.py  GameMap.py  SceneBase.py  System.py  SystemConfigBase.py  UIManager.py  Video.py  __init__.py
Sample/Resource/: icon.icns
Sample/Source/: Battler.py  Data.py  Door.py  Enemy.py  EnemyDamageText.py  EnemyInfo.py  Equip.py  GameInstance.py  Item.py  ItemInfo.py  MovementSpecials.py  Player.py  Save.py  System.py  Teleporter.py  __init__.py
Sample/typings/: __builtins__.pyi
Styles/: blueprintEditor.qss  config.qss  fileSelector.qss  main.qss  mapEdit.qss  markdownCompact.qss  markdownDocument.qss  nodeInput.qss  singleRow.qss  starterBtn.qss
Utils/: DataConfig.py  DataValue.py  EditorData.py  File.py  Locale.py  Panel.py  PluginSystem.py  SFMLRender.py  System.py  SystemConfigGenerator.py  TextInputHint.py  TextInputHover.py  __init__.py
Widgets/: AboutDialog.py  ActorInfo.py  ActorQueuePanel.py  AnimationOverview.py  AnimationWindow.py  AspectRatioContainer.py  BlueprintEditor.py  ClassSelector.py  CommonFunctionWindow.py  ConfigWindow.py  Console.py  CurveWindow.py  EditorPanel.py  FileExplorer.py  FilePreview.py  GamePanel.py  GeneralDataEditor.py  LightPanel.py  LocaleEditor.py  MarkdownPreviewer.py  MarkdownRender.py  PackDialog.py  ReferenceTreeDialog.py  SearchLineEdit.py  SettingsWindow.py  TileSelect.py  TilesetEditor.py  Toggle.py  W_AboutDialog.py  W_ActorInfo.py  W_ActorQueuePanel.py  W_AnimationWindow.py  W_BlueprintEditor.py  W_ClassSelector.py  W_CommonFunctionWindow.py  W_ConfigWindow.py  W_Console.py  W_EditorPanel.py  W_FileExplorer.py  W_FilePreview.py  (+13 more)
Widgets/Utils/: AiChatDialog.py  AiConfigDialog.py  AutoTilePanel.py  AutoTileRenderer.py  BlueprintPreview.py  BlueprintValidation.py  ClassDetailMixin.py  (+49 more)
agent/: BlueprintContext.py  BlueprintPatch.py  Compress.js  FileTree.py  NodeIndex.py  ProjectSearch.py  PromptResources.py  Start.js  Terminal.py  Tools.json
iOSTemplate/: AppDelegate.m  Info.plist  LudorkSceneDelegate.h  LudorkSceneDelegate.m  PythonRunner.h  PythonRunner.mm  SFAppDelegate+LudorkScene.m  SFMLMain.mm  ViewController.m  project.pbxproj.template
patches/: NodeGraphQt-patch-issue-411.diff
tools/: apply_nodegraphqt_patch.bat  apply_nodegraphqt_patch.sh  localeTransfer.py  pack.py  pklTransfer.py
typings/: __builtins__.pyi
(+766 files in other folders)
